kvision-assets/src/css/style.css
/* ... */
.kv-ons-checkbox label {
    margin-left: 5px;
}

.ts-control {
    flex-wrap: nowrap;
}

.ts-control .item {
    white-space: nowrap;
}

.ts-control input::placeholder {
    color: var(--bs-secondary-color);
    opacity: 1;
}

.disabled .ts-control {
    background-color: var(--bs-form-control-disabled-bg);
    opacity: 1;
}

.disabled .ts-control input::placeholder {
    color: var(--bs-secondary-color);
    opacity: 1;
}

.ts-wrapper.kv-typeahead .ts-control, .ts-wrapper.kv-typeahead .ts-control input {
    cursor: inherit;
}

.ts-wrapper.is-invalid.kv-typeahead, .was-validated .invalid.kv-typeahead, .was-validated :invalid + .ts-wrapper.kv-typeahead {
    padding-right: calc(1.5em + .75rem);
    background-image: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 12 12%27 width=%2712%27 height=%2712%27 fill=%27none%27 stroke=%27%23dc3545%27%3e%3ccircle cx=%276%27 cy=%276%27 r=%274.5%27/%3e%3cpath stroke-linejoin=%27round%27 d=%27M5.8 3.6h.4L6 6.5z%27/%3e%3ccircle cx=%276%27 cy=%278.2%27 r=%27.6%27 fill=%27%23dc3545%27 stroke=%27none%27/%3e%3c/svg%3e");
    background-repeat: no-repeat;
    background-position: right calc(.375em + .1875rem) center;
    background-size: calc(.75em + .375rem) calc(.75em + .375rem);
}

.kv-tom-select-remote-divider {
    height: 0;
    margin: .5rem 0;
    overflow: hidden;
    border-top: 1px solid #888888;
}

.toastify {
    background-image: unset;
    background-color: blue;
}

.kv-toastify-primary {
    color: #fff !important;
    background-color: rgba(13,110,253) !important;
}

.kv-toastify-secondary {
    color: #fff !important;
    background-color: rgba(108,117,125) !important;
}

.kv-toastify-success {
    color: #fff !important;
    background-color: rgba(25,135,84) !important;
}

.kv-toastify-info {
    color: #000 !important;
    background-color: rgba(13,202,240) !important;
}

.kv-toastify-warning {
    color: #000 !important;
    background-color: rgba(255,193,7) !important;
}

.kv-toastify-danger {
    color: #fff !important;
    background-color: rgba(220,53,69) !important;
}

.kv-toastify-light {
    color: #000 !important;
    background-color: rgba(248,249,250) !important;
}

.kv-toastify-dark {
    color: #fff !important;
    background-color: rgba(33,37,41) !important;
}

.dropdown-toggle.kv-dropdown-no-arrow::after {
    content: none;
}

.btn-group-xsm > .btn, .btn-xsm {
    --bs-btn-padding-y: 0.1rem;
    --bs-btn-padding-x: 0.4rem;
    --bs-btn-font-size: 0.8rem;
    --bs-btn-border-radius: 0.25rem;
    padding-top: 3px;
}

.form-check-input:not(:checked):disabled {
    background-color: #e9ecef;
    opacity: 1;
}

.form-check-input:disabled ~ .form-check-label, .form-check-input[disabled] ~ .form-check-label {
    opacity: unset;
}

/*!
 * bootstrap-vertical-tabs - v1.2.2
 * https://dbtek.github.io/bootstrap-vertical-tabs
 * 2016-12-02
 * Copyright (c) 2016 İsmail Demirbilek
 * License: MIT
 */
.nav-tabs.tabs-left, .nav-tabs.tabs-right {
    border-bottom: none;
    padding-top: 2px;
}

.nav-tabs.tabs-left {
    border-right: 1px solid #dee2e6;
}

.nav-tabs.tabs-right {
    border-left: 1px solid #dee2e6;
}

.nav-tabs.tabs-left > li.nav-item, .nav-tabs.tabs-right > li.nav-item {
    float: none;
    margin-bottom: 2px;
}

.nav-tabs.tabs-left > li.nav-item {
    margin-right: -1px;
}

.nav-tabs.tabs-right > li.nav-item {
    margin-left: -1px;
}

.nav-tabs.tabs-left > li.nav-item > a.nav-link.active,
.nav-tabs.tabs-left > li.nav-item > a.nav-link.active:hover,
.nav-tabs.tabs-left > li.nav-item > a.nav-link.active:focus {
    border-bottom-color: #dee2e6;
    border-right-color: transparent;
}

.nav-tabs.tabs-right > li.nav-item > a.nav-link.active,
.nav-tabs.tabs-right > li.nav-item > a.nav-link.active:hover,
.nav-tabs.tabs-right > li.nav-item > a.nav-link.active:focus {
    border-bottom: 1px solid #dee2e6;
    border-left-color: transparent;
}

.nav-tabs.tabs-left > li.nav-item > a.nav-link {
    border-radius: 4px 0 0 4px;
    margin-right: 0;
    display: block;
}

.nav-tabs.tabs-right > li.nav-item > a.nav-link {
    border-radius: 0 4px 4px 0;
    margin-right: 0;
}

